# documentacoes_fast_API

./: README.md  pyproject.toml
documentacoes_fast_API/: .gitignore  main.py
